build/docker/Kubernetes/apf-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: apf-svc
  labels:
    name: apf
    app: apf
spec:
  selector:
    name: apf 
  type: NodePort
  ports:
   - port: 8888
     targetPort: 80
     protocol: TCP
