build/docker/Kubernetes/apf-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apf-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apf
        backend:
          serviceName: apf-svc
          servicePort: 8888
